feat(forge): update SpongeForge for Forge 62.0.2 / MC 26.1
Port SpongeForge from Forge 61.0.6 to 62.0.2, targeting Minecraft 26.1.
Migrate build system from ForgeGradle 6.0.35 to 7.0.17 (complete DSL
rewrite) and Gradle 9.2.1 to 9.3.0.

ForgeGradle 7.x migration:
- minecraft.dependency() replaces "minecraft"() dependency syntax
- runs { register() } replaces runs { create() }
- SlimeLauncher replaces RunConfig system (no genIntellijRuns)
- Dedicated minecraftLibsConfig avoids cyclic configuration dependency
- macOS client runs require -XstartOnFirstThread for GLFW

Forge API changes:
- LoadingModList/ModList now use static methods (no .get() singleton)
- EntityAttributeCreationEvent uses global BUS field

Mixin updates for 26.1 Forge bytecode:
- RegistryDataLoaderMixin_Forge: async pipeline, RegistryLoadTask API
- ReloadableServerResourcesMixin_Forge: 7-param constructor, lambda $2
- MinecraftServerMixin_Forge: lambda $30/$31 → $1/$4
- TagLoaderMixin_Forge: lambda $6 → $1
- AbstractFurnaceBlockEntityMixin_Forge: RecipeContext pattern, instance
  methods for canBurn/burn, Items.WET_SPONGE
- ForgeHooksMixin_Forge: guard LootModifierManager on early ticks

Common fixes (all platforms):
- LivingEntityMixin_Damage: @Expression replaces @At("STORE") for
  boolean shield flag (Forge strips LVT type info)
- ServerLevelMixin: @Coerce for weather boolean capture
- SpongeWorldManager: use server().registryAccess() for LEVEL_STEM
  (excluded from Sponge's scoped holder)
- SpongeLifecycle: null-guard serviceProvider in establishServerFeatures

Signed-off-by: Gabriel Harris-Rouquette <gabizou@me.com>