@@ -24,14 +24,16 @@
  */
 package org.spongepowered.forge.mixin.core.world.level.block.entity;
 
+import com.llamalad7.mixinextras.injector.wrapoperation.Operation;
+import com.llamalad7.mixinextras.injector.wrapoperation.WrapOperation;
+import com.llamalad7.mixinextras.sugar.Local;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.NonNullList;
-import net.minecraft.core.RegistryAccess;
 import net.minecraft.server.level.ServerLevel;
 import net.minecraft.util.Mth;
 import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.crafting.AbstractCookingRecipe;
 import net.minecraft.world.item.crafting.RecipeHolder;
-import net.minecraft.world.item.crafting.SingleRecipeInput;
 import net.minecraft.world.level.block.entity.AbstractFurnaceBlockEntity;
 import net.minecraft.world.level.block.state.BlockState;
 import org.objectweb.asm.Opcodes;
@@ -50,79 +52,115 @@ import org.spongepowered.asm.mixin.injection.Inject;
 import org.spongepowered.asm.mixin.injection.Redirect;
 import org.spongepowered.asm.mixin.injection.Slice;
 import org.spongepowered.asm.mixin.injection.callback.CallbackInfo;
-import org.spongepowered.asm.mixin.injection.callback.CallbackInfoReturnable;
-import org.spongepowered.asm.mixin.injection.callback.LocalCapture;
 import org.spongepowered.common.SpongeCommon;
 import org.spongepowered.common.bridge.block.entity.AbstractFurnaceBlockEntityBridge;
 import org.spongepowered.common.event.tracking.PhaseTracker;
+import org.spongepowered.common.event.tracking.phase.general.GeneralPhase;
+import org.spongepowered.common.event.tracking.phase.general.RecipeContext;
 import org.spongepowered.common.inventory.adapter.impl.slots.SlotAdapter;
 import org.spongepowered.common.item.util.ItemStackUtil;
+import org.spongepowered.common.mixin.core.world.level.block.entity.BaseContainerBlockEntityMixin;
 
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
-import javax.annotation.Nullable;
-
 @Mixin(AbstractFurnaceBlockEntity.class)
-public abstract class AbstractFurnaceBlockEntityMixin_Forge implements AbstractFurnaceBlockEntityBridge {
+public abstract class AbstractFurnaceBlockEntityMixin_Forge extends BaseContainerBlockEntityMixin implements AbstractFurnaceBlockEntityBridge {
 
     // @formatter:off
     @Shadow protected NonNullList<ItemStack> items;
-    @Shadow int cookingTimer;
-    @Shadow private boolean shadow$canBurn(RegistryAccess registryAccess, @Nullable RecipeHolder<?> recipe, SingleRecipeInput input, NonNullList<ItemStack> slots, int maxStackSize) {
-        throw new UnsupportedOperationException("Shadowed canBurn");
-    }
+    @Shadow private int cookingTimer;
     // @formatter:on
 
+    private static RecipeContext switched;
     private boolean forge$filledWaterBucket;
 
     // Tick up and Start
-    @Redirect(method = "serverTick",
+    @WrapOperation(method = "serverTick",
         at = @At(value = "INVOKE",
-            target = "Lnet/minecraft/world/level/block/entity/AbstractFurnaceBlockEntity;canBurn(Lnet/minecraft/core/RegistryAccess;Lnet/minecraft/world/item/crafting/RecipeHolder;Lnet/minecraft/world/item/crafting/SingleRecipeInput;Lnet/minecraft/core/NonNullList;I)Z",
-            ordinal = 1))
-    private static boolean forge$checkIfCanSmelt(final AbstractFurnaceBlockEntity entityIn,
-                                                 final RegistryAccess registryAccess,
-                                                 final RecipeHolder<?> recipe,
-                                                 final SingleRecipeInput input,
-                                                 final NonNullList<ItemStack> slots,
-                                                 final int maxStackSize) {
-        final var entity = (AbstractFurnaceBlockEntityMixin_Forge) (Object) (entityIn);
-        if (!entity.shadow$canBurn(registryAccess, recipe, input, slots, maxStackSize)) {
+            target = "Lnet/minecraft/world/level/block/entity/AbstractFurnaceBlockEntity;canBurn(Lnet/minecraft/core/NonNullList;ILnet/minecraft/world/item/ItemStack;)Z"
+        )
+    )
+    private static boolean forge$checkIfCanSmelt(
+        final AbstractFurnaceBlockEntity instance,
+        final NonNullList<ItemStack> maxResultCount,
+        final int items,
+        final ItemStack maxStackSize,
+        final Operation<Boolean> original,
+        final ServerLevel level,
+        final BlockPos pos,
+        final BlockState state,
+        final AbstractFurnaceBlockEntity entityIn,
+        final @Local RecipeHolder<? extends AbstractCookingRecipe> recipe
+    ) {
+        if (!original.call(instance, maxResultCount, items, maxStackSize)) {
             return false;
         }
 
-        final ItemStackSnapshot fuel = ItemStackUtil.snapshotOf(slots.get(1));
+        final var cookingRecipe = recipe.value();
 
+        final var entity = (AbstractFurnaceBlockEntityMixin_Forge) (Object) (entityIn);
+        final ItemStackSnapshot fuel = ItemStackUtil.snapshotOf(maxResultCount.get(1));
         final Cause cause = PhaseTracker.getInstance().currentCause();
+        final var identifier = recipe.id().identifier();
+        // Prepare a phase stack to capture the recipe in use
+        final var context = GeneralPhase.State.RECIPE_CRAFTING.createPhaseContext(PhaseTracker.getInstance())
+            .recipe(recipe.value())
+            .recipeID(identifier)
+            .furnace(entityIn)
+            .provideItem(maxResultCount.get(1))
+            .buildAndSwitch();
+        switched = context;
         if (entity.cookingTimer == 0) { // Start
             final CookingEvent.Start event = SpongeEventFactory.createCookingEventStart(cause, (FurnaceBlockEntity) entityIn, Optional.of(fuel),
-                Optional.of((CookingRecipe) recipe.value()), Optional.of((ResourceKey) (Object) recipe.id().identifier()));
+                Optional.of((CookingRecipe) cookingRecipe), Optional.of((ResourceKey) (Object) identifier));
             SpongeCommon.post(event);
             return !event.isCancelled();
         } else { // Tick up
-            final ItemStackSnapshot cooking = ItemStackUtil.snapshotOf(entity.items.getFirst());
+            final ItemStackSnapshot cooking = ItemStackUtil.snapshotOf(entity.items.get(0));
             final CookingEvent.Tick event = SpongeEventFactory.createCookingEventTick(cause, (FurnaceBlockEntity) entityIn, cooking, Optional.of(fuel),
-                Optional.of((CookingRecipe) recipe.value()), Optional.of((ResourceKey) (Object) recipe.id().identifier()));
+                Optional.of((CookingRecipe) cookingRecipe), Optional.of((ResourceKey) (Object) identifier));
             SpongeCommon.post(event);
             return !event.isCancelled();
+        }
+    }
+
+    @Inject(method = "serverTick", at = @At("RETURN"))
+    private static void forge$closeRecipeContext(
+        final ServerLevel level,
+        final BlockPos pos, final BlockState state,
+        final AbstractFurnaceBlockEntity entity,
+        final CallbackInfo ci) {
+        if (switched != null && PhaseTracker.getInstance().getPhaseContext() != switched) {
+            SpongeCommon.logger().warn("Closed a recipe context that wasn't open!");
+        }
+        final var closing = switched;
+        switched = null;
+        if (closing != null) {
+            closing.close();
         }
     }
 
     // Tick down
     @Redirect(method = "serverTick", at = @At(value = "INVOKE", target = "Lnet/minecraft/util/Mth;clamp(III)I"))
-    private static int forge$resetCookTimeIfCancelled(final int newCookTime, final int zero, final int totalCookTime,
-                                                      final ServerLevel level, final BlockPos entityPos, final BlockState state, final AbstractFurnaceBlockEntity entityIn) {
+    private static int forge$resetCookTimeIfCancelled(
+        final int newCookTime, final int zero, final int totalCookTime,
+        final ServerLevel level, final BlockPos entityPos, final BlockState state,
+        final AbstractFurnaceBlockEntity entityIn) {
         final int clampedCookTime = Mth.clamp(newCookTime, zero, totalCookTime);
         final var entity = (AbstractFurnaceBlockEntityMixin_Forge) (Object) entityIn;
-        final ItemStackSnapshot fuel = ItemStackUtil.snapshotOf(entity.items.get(1));
+        if (PhaseTracker.getInstance().getPhaseContext() != switched) {
+            // we're in an invariant state
+            return clampedCookTime;
+        }
+        final var fuel = switched.usedItem();
         final Cause cause = PhaseTracker.getInstance().currentCause();
-        final var recipe = entity.bridge$getCurrentRecipe();
+        final var recipe = switched.recipe();
         final ItemStackSnapshot cooking = ItemStackUtil.snapshotOf(entity.items.get(0));
         final CookingEvent.Tick event = SpongeEventFactory.createCookingEventTick(cause, (FurnaceBlockEntity) entityIn, cooking, Optional.of(fuel),
-                recipe.map(r -> (CookingRecipe) r.value()), recipe.map(r -> (ResourceKey) (Object) r.id().identifier()));
+           Optional.of((CookingRecipe) recipe), Optional.of((ResourceKey) (Object) switched.recipeID()));
         SpongeCommon.post(event);
         if (event.isCancelled()) {
             return entity.cookingTimer; // dont tick down
@@ -134,51 +172,62 @@ public abstract class AbstractFurnaceBlockEntityMixin_Forge implements AbstractF
     // Finish
     @Inject(method = "burn", at = @At(value = "INVOKE", target = "Lnet/minecraft/core/NonNullList;set(ILjava/lang/Object;)Ljava/lang/Object;"),
         slice = @Slice(
-            from = @At(value = "FIELD", target = "Lnet/minecraft/world/level/block/Blocks;WET_SPONGE:Lnet/minecraft/world/level/block/Block;", opcode = Opcodes.GETSTATIC)
+            from = @At(value = "FIELD", target = "Lnet/minecraft/world/item/Items;WET_SPONGE:Lnet/minecraft/world/item/Item;", opcode = Opcodes.GETSTATIC)
         ))
-    private void forge$captureBucketFill(final RegistryAccess registryAccess, final RecipeHolder<?> recipe, final SingleRecipeInput input, final NonNullList<ItemStack> slots, final int maxStackSize, final CallbackInfoReturnable<Boolean> cir) {
-        this.forge$filledWaterBucket = true;
+    private void forge$captureBucketFill(
+        final NonNullList<ItemStack> items, final ItemStack inputItemStack, final ItemStack result, final CallbackInfo ci
+    ) {
+        final Cause cause = PhaseTracker.getInstance().currentCause();
+        final FurnaceBlockEntity entity = cause.first(FurnaceBlockEntity.class)
+            .orElseThrow(() -> new IllegalStateException("Expected to have a FurnaceBlockEntity in the Cause"));
+        ((AbstractFurnaceBlockEntityMixin_Forge) entity).forge$filledWaterBucket = true;
     }
 
-    @Inject(
-        method = "burn",
-        locals = LocalCapture.CAPTURE_FAILHARD,
-        at = @At(value = "INVOKE", target = "Lnet/minecraft/world/item/ItemStack;shrink(I)V"))
+    @Inject(method = "burn", at = @At(
+        value = "INVOKE",
+        target = "Lnet/minecraft/world/item/ItemStack;shrink(I)V",
+        shift = At.Shift.AFTER
+    ))
     private void forge$afterSmeltItem(
-        final RegistryAccess registryAccess, final RecipeHolder<?> recipe, final SingleRecipeInput input,
-        final NonNullList<ItemStack> slots, final int maxStackSize,
-        final CallbackInfoReturnable<Boolean> cir,
-        final ItemStack itemIn, final ItemStack recipeResult, final ItemStack itemOut
+        final NonNullList<ItemStack> items, final ItemStack inputItemStack, final ItemStack result, final CallbackInfo ci
     ) {
-        final FurnaceBlockEntity entity = (FurnaceBlockEntity) this;
+        final ItemStack itemIn = items.get(0);
+        final ItemStack itemOut = items.get(2);
+        if (PhaseTracker.getInstance().getPhaseContext() != switched) {
+            return;
+        }
 
+        final Cause cause = PhaseTracker.getInstance().currentCause();
+        final FurnaceBlockEntity entity = (FurnaceBlockEntity) switched.furnace();
+        final var recipe = switched.recipe();
+        final var recipeID = switched.recipeID();
         final List<SlotTransaction> transactions = new ArrayList<>();
         itemIn.grow(1);
         final ItemStackSnapshot originalSmeltItem = ItemStackUtil.snapshotOf(itemIn);
         itemIn.shrink(1);
         transactions.add(new SlotTransaction(entity.inventory().slot(0).get(), originalSmeltItem, ItemStackUtil.snapshotOf(itemIn)));
 
-        final boolean hasFuel = !this.forge$filledWaterBucket;
-        if (this.forge$filledWaterBucket) {
-            transactions.add(new SlotTransaction(entity.inventory().slot(1).get(), ItemStackSnapshot.empty(), ItemStackUtil.snapshotOf(slots.get(1))));
+        final boolean hasFuel = !((AbstractFurnaceBlockEntityMixin_Forge) entity).forge$filledWaterBucket;
+        if (((AbstractFurnaceBlockEntityMixin_Forge) entity).forge$filledWaterBucket) {
+            transactions.add(new SlotTransaction(entity.inventory().slot(1).get(), ItemStackSnapshot.empty(), ItemStackUtil.snapshotOf(items.get(1))));
         }
-        this.forge$filledWaterBucket = false;
+        ((AbstractFurnaceBlockEntityMixin_Forge) entity).forge$filledWaterBucket = false;
 
         if (itemOut.isEmpty()) {
-            transactions.add(new SlotTransaction(entity.inventory().slot(2).get(), ItemStackSnapshot.empty(), ItemStackUtil.snapshotOf(recipeResult)));
-        } else if (ItemStack.isSameItemSameComponents(itemOut, recipeResult)) {
+            transactions.add(new SlotTransaction(entity.inventory().slot(2).get(), ItemStackSnapshot.empty(), ItemStackUtil.snapshotOf(result)));
+        } else if (ItemStack.isSameItemSameComponents(itemOut, result)) {
             itemOut.shrink(1);
             final ItemStackSnapshot originalResult = ItemStackUtil.snapshotOf(itemOut);
             itemOut.grow(1);
             transactions.add(new SlotTransaction(entity.inventory().slot(2).get(), originalResult, ItemStackUtil.snapshotOf(itemOut)));
         }
-        final Optional<ItemStackSnapshot> fuel = hasFuel && !slots.get(1).isEmpty() ? Optional.of(ItemStackUtil.snapshotOf(slots.get(1))) : Optional.empty();
-        final CookingEvent.Finish event = SpongeEventFactory.createCookingEventFinish(PhaseTracker.getInstance().currentCause(), entity,
-            fuel, Optional.of((CookingRecipe) recipe.value()), Optional.of((ResourceKey) (Object) recipe.id().identifier()), Collections.unmodifiableList(transactions));
+        final Optional<ItemStackSnapshot> fuel = hasFuel && !items.get(1).isEmpty() ? Optional.of(ItemStackUtil.snapshotOf(items.get(1))) : Optional.empty();
+        final CookingEvent.Finish event = SpongeEventFactory.createCookingEventFinish(cause, entity,
+            fuel, Optional.of((CookingRecipe) recipe), Optional.of((ResourceKey) (Object) recipeID), Collections.unmodifiableList(transactions));
         SpongeCommon.post(event);
 
         for (final SlotTransaction transaction : transactions) {
-            transaction.custom().ifPresent(item -> slots.set(((SlotAdapter) transaction.slot()).getOrdinal(), ItemStackUtil.fromSnapshotToNative(item)));
+            transaction.custom().ifPresent(item -> items.set(((SlotAdapter) transaction.slot()).getOrdinal(), ItemStackUtil.fromSnapshotToNative(item)));
         }
     }
 
